Bug 36002 - Latest kernel fails to build multi-threaded on ecryptfs home
Summary: Latest kernel fails to build multi-threaded on ecryptfs home
Status: CLOSED CODE_FIX
Alias: None
Product: File System
Classification: Unclassified
Component: ecryptfs (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: fs_ecryptfs
URL:
Keywords:
Depends on:
Blocks: 32012
  Show dependency tree
 
Reported: 2011-05-27 18:20 UTC by Maciej Rutecki
Modified: 2011-05-30 08:20 UTC (History)
5 users (show)

See Also:
Kernel Version: 2.6.39-rc2
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Maciej Rutecki 2011-05-27 18:20:19 UTC
Subject    : Latest kernel fails to build multi-threaded on ecryptfs home
Submitter  : David <david@unsolicited.net>
Date       : 2011-05-18
Message-ID : 4DD41613.4040102@unsolicited.net
References : http://marc.info/?l=linux-kernel&m=130574493132641&w=2

This entry is being used for tracking a regression from 2.6.38. Please don't
close it until the problem is fixed in the mainline.
Comment 1 Tyler Hicks 2011-05-27 18:54:59 UTC
Maciej - Thanks for opening a bug to track this.

I believe that I've fixed this bug. Unfortunately, the code was getting so ugly that I had to do 2 cleanup patches before I could cleanly solve the bug. I've just pushed the branch to:

git://git.kernel.org/pub/scm/linux/kernel/git/ecryptfs/ecryptfs-2.6.git irace

David - Let me know if you can pull the irace branch down and test out it. I'd appreciate it.

Tyler
Comment 2 david 2011-05-27 19:03:13 UTC
It will have to wait 'till tomorrow now, but I'll give it a whirl and report back.

Thanks
David
Comment 3 david 2011-05-28 11:57:01 UTC
I can confirm that your patches seem to correct my issues. All looks fine through several kernel builds.

Cheers (and many thanks)
David
Comment 4 Tyler Hicks 2011-05-29 21:45:19 UTC
David - Thanks for testing that branch.

Linus just pulled the fixes in, so this should be fixed in 2.6.40-rc1.

http://git.kernel.org/linus/bd1bfe40ac6bdf9593da29b822bc301b77a97d6a
Comment 5 Florian Mickler 2011-05-30 07:55:55 UTC
A patch referencing this bug report has been merged in v3.0-rc1:

commit 3b06b3ebf44170c90c893c6c80916db6e922b9f2
Author: Tyler Hicks <tyhicks@linux.vnet.ibm.com>
Date:   Tue May 24 03:49:02 2011 -0500

    eCryptfs: Fix new inode race condition

Note You need to log in before you can comment on or make changes to this bug.